2018-06-21  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1081
	
	* src/absorption.cc,nlte.cc:  Changed so pressure broadening takes
	both T and T0
	
	* src/linefunctions.cc:  Changed so pressure broadening takes both 
	T and T0.  Added two pressure broadening options for testing
	
	* src/m_linerecord.cc, method.cc:  Added three ways to set line 
	shape paramters for the xsec_species2 method
	
	* src/pressurebroadeningdata.cc,h:  Addning now testing pressure
	broadening form.

2018-06-19  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1080
	
	* src/m_zeeman.cc:  Added output for 
	zeeman_linerecord_precalcModifyFromData
	
	* src/zeeman.cc: Changed so cutoff 'should' work
	
	* src/nlte.cc: removed compiler warning 
	
	* src/quantum.cc,h:  added parity properly
	
	* src/xml_io_array_types.cc:  Fixed bug in quantum identifier
	reading where the variable was not properly reset so old numbers
	remained in a variable.

2018-06-17  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1079

	Added check for uninitialized variables for calls through the
	C interface.

	* src/interactive_workspace.cc (execute_workspace_method):
	Added check.

2018-06-154  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1078
	
	Updated to fixed Zeeman calculations.  Note that this intentionally
	breaks controlfiles.  Also note that Zeeman is now using the 
	line functions namespace, so cutoff and such must be defined in
	the line record
	
	* src/jacobian.cc:  Modified helper functions
	
	* src/methods.cc: Changed name of 
	propmat_clearskyAddZeemanFromPreCalc
	to propmat_clearskyAddZeeman
	
	* src/m_zeeman.cc:  Chnaged to use new method
	
	* src/propagationmatrix.cc,h: AddPolarized takes a
	Complex instead of a Numeric now
	
	* src/zeeman.cc,h:  Updated zeeman_on_the_fly.  It
	now works for all jacobians.  Compare with 
	xsec_species_line_mixing_wrapper_with_zeeman for complexity

	
2018-06-14  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1077
	